Keep the warning about missing encoding when Maven is run on Java 17. Skip transitive dependencies in `--add-modules` and `--add-reads` options.